--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/datos-ddp-drp-gbftrec/datos-ddp-drp-gbftrec.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/datos-ddp-drp-gbftrec/datos-ddp-drp-gbftrec.component.html
@@ -5,27 +5,74 @@
     </div>
     
     <div class="d-flex justify-content-center table-responsive tabla-gris">
-        <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8" style="width: 40%;">
+        <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
             <ng-container matColumnDef="drp">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header> DRP </th>
-                <td mat-cell *matCellDef="let element; index as i" align="center"> <b> {{ i + 1 }} </b> </td>
+              <th mat-header-cell *matHeaderCellDef mat-sort-header>DRP</th>
+              <td mat-cell *matCellDef="let element" align="center">{{ element.enum }}</td>
             </ng-container>
-            <ng-container matColumnDef="numeroDrp">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header> Número DRP </th>
-                <td mat-cell *matCellDef="let element" align="center"> {{ element.numeroDRP }} </td>
+            <ng-container matColumnDef="numDrp">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header>Número DRP</th>
+              <td mat-cell *matCellDef="let element" align="center">{{ element.numeroDrp }}</td>
             </ng-container>
-            <ng-container matColumnDef="valorSolicitudDdp">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header> Valor </th>
-                <td mat-cell *matCellDef="let element" align="center"> {{ element.valor }} </td>
+            <ng-container matColumnDef="ProyectoLLaveMen">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header>Nombre proyecto</th>
+              <td mat-cell *matCellDef="let element" style="padding: 0 !important">
+                <div
+                  class="sub-item-table justify-content-center align-items-center text-center"
+                  *ngFor="let el of element.listDyProyectos; let i = index"
+                  [class.h-3]="el.listDyUsos.length === 1"
+                  [class.h-6]="el.listDyUsos.length === 2"
+                  [class.h-9]="el.listDyUsos.length === 3"
+                >
+                  {{ el.nombre }}
+                </div>
+              </td>
             </ng-container>
-            <ng-container matColumnDef="saldoPresupuestal">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header> Saldo actual DRP</th>
-                <td mat-cell *matCellDef="let element" align="center"> {{ element.saldo }} </td>
+            <ng-container matColumnDef="NombreUso">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header>Nombre uso</th>
+              <td mat-cell *matCellDef="let element" style="padding: 0 !important">
+                <div
+                  class="sub-item-table justify-content-center align-items-center"
+                  *ngFor="let el of element.listDyProyectos; let i = index"
+                >
+                  <div *ngFor="let el2 of el.listDyUsos; let j = index" class="borber-table">
+                    <div class="sub-item-table--element">
+                      {{ el2.nombre }}
+                    </div>
+                  </div>
+                </div>
+              </td>
+            </ng-container>
+            <ng-container matColumnDef="valor">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header>Valor</th>
+              <td mat-cell *matCellDef="let element" style="padding: 0 !important">
+                <div
+                  class="sub-item-table justify-content-center align-items-center"
+                  *ngFor="let el of element.listDyProyectos; let i = index"
+                >
+                  <div *ngFor="let el2 of el.listDyUsos; let j = index" class="borber-table">
+                    <div class="sub-item-table--element">${{ el2.valorUso }}</div>
+                  </div>
+                </div>
+              </td>
+            </ng-container>
+            <ng-container matColumnDef="saldo">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header>Saldo DRP</th>
+              <td mat-cell *matCellDef="let element" style="padding: 0 !important">
+                <div
+                  class="sub-item-table justify-content-center align-items-center"
+                  *ngFor="let el of element.listDyProyectos; let i = index"
+                >
+                  <div *ngFor="let el2 of el.listDyUsos; let j = index" class="borber-table">
+                    <div class="sub-item-table--element">${{ el2.saldo }}</div>
+                  </div>
+                </div>
+              </td>
             </ng-container>
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
             <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
         </table>
     </div>
     
-    <app-tabla-drp-gbftrec *ngIf="solicitudPago.tablaUsoFuenteAportante !== undefined && solicitudPago.tablaUsoFuenteAportante.usos.length > 0" [tablaUsoFuenteAportante]="solicitudPago.tablaUsoFuenteAportante.usos"></app-tabla-drp-gbftrec>
+    <!-- <app-tabla-drp-gbftrec *ngIf="solicitudPago.tablaUsoFuenteAportante !== undefined && solicitudPago.tablaUsoFuenteAportante.usos.length > 0" [tablaUsoFuenteAportante]="solicitudPago.tablaUsoFuenteAportante.usos"></app-tabla-drp-gbftrec> -->
 </section>
